# kern

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  EDGE.md  LICENSE  NOTICE  README.html  README.md  SECURITY.md  TRADEMARK.md  deny.toml  install.ps1  install.sh  kern-v0.6.2.provenance.txt  kern-v0.6.2.provenance.txt.ots  kern-v0.6.3.provenance.txt  kern-v0.6.3.provenance.txt.ots
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  cla.yml  release.yml
alpine/lib/apk/db/: installed  triggers
alpine/sbin/: apk
alpine/usr/lib/: libapk.so.3.0.0  libz.so.1.3.2
assets/brand/: README.md
bindings/node/: README.md  index.d.ts  index.js  package.json
bindings/node/test/: sandbox.test.js
bindings/python/: .gitignore  KERN_ISSUE_stop_pidns.md  README.md  pyproject.toml
bindings/python/kern_sandbox/: __init__.py  mcp.py
bindings/python/tests/: test_sandbox.py
blog/: README.md  introducing-kern.md  what-the-type-system-buys-you.md
crates/kern-cli/: Cargo.toml
crates/kern-cli/src/: auth.rs  boxcp.rs  builds.rs  caps.rs  cli.rs  completions.rs  compose.rs  config.rs  dockerfile.rs  dockerignore.rs  doctor.rs  egress.rs  error.rs  main.rs  openat2.rs  pod.rs  ports.rs  pty.rs  registry.rs  runstats.rs  secret.rs  toml_lite.rs  toml_surgery.rs  tui.rs  ui.rs  vdisk.rs  volume.rs
crates/kern-cli/src/commands/: mod.rs
crates/kern-cli/src/sandbox/: mod.rs
crates/kern-cli/tests/: sandbox_run.rs  smoke.rs
crates/kern-common/: Cargo.toml
crates/kern-common/src/: lib.rs  registry_auth.rs  toml_lite.rs
crates/kern-compose/: Cargo.toml
crates/kern-compose/src/: lib.rs  yaml.rs
crates/kern-isolation/: Cargo.toml
crates/kern-isolation/examples/: sandbox_e2e.rs  sandbox_profile.rs  sandbox_stress.rs
crates/kern-isolation/src/: cgroup.rs  landlock.rs  lib.rs  outcome.rs  ports.rs  real.rs  sandbox.rs  seccomp.rs  ssh.rs
crates/kern-oci/: Cargo.toml
crates/kern-oci/src/: archive.rs  json.rs  lib.rs  net.rs  pull.rs  push.rs  search.rs
docs/: CONFIG.md  EGRESS.md  STORAGE.md
examples/: Makefile.kern  README.md  add-host.sh  agent-code-interpreter.py  agent-tool-runner.py  airgapped-ci.sh  batch-process.sh  benchmark.py  bind-rootfs-edge.sh  build-and-extract.sh  build-with-dockerfile.sh  canary-deploy.sh  ci-in-a-box.sh  ci-integration.sh  code-interpreter.py  compare-vs-bwrap.sh  compare-vs-docker.sh  compose-stack.sh  compose-webstack.sh  compose-webstack.toml  copy-files.sh  data-pipeline.sh  database-box.sh  dependency-audit.sh  device-isolation.sh  edge-many-services.sh  embed-python.py  embed-rust.rs  etl-with-deps.sh  familiar-commands.sh  fan-out.sh  fleet-watchdog.sh  gc-prune-doctor.sh  git-precommit-sandbox.sh  github-actions.yml  go-static-build.sh  governed-run.sh  hardening.sh  init-reaper.sh  inspect-plan.sh  (+52 more)
examples/essentials/: README.md  limits.sh  mount-and-test.sh  run.sh  service.sh
examples/stack-python-postgres/: Dockerfile  app.py  run.sh
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: compose_yaml.rs  oci_json.rs  tar_member_path.rs  tar_vet.rs
provenance/: README.md  make-provenance.sh  v0.6.10.provenance.txt  v0.6.10.provenance.txt.ots  v0.6.11.provenance.txt  v0.6.11.provenance.txt.ots  v0.6.12.provenance.txt  v0.6.12.provenance.txt.ots  v0.6.13.provenance.txt  v0.6.13.provenance.txt.ots  v0.6.14.provenance.txt  v0.6.14.provenance.txt.ots  v0.6.2.provenance.txt.ots  v0.6.3.provenance.txt.ots  v0.6.4.provenance.txt  v0.6.4.provenance.txt.ots  v0.6.5.provenance.txt  v0.6.5.provenance.txt.ots  v0.6.7.provenance.txt  v0.6.7.provenance.txt.ots  v0.6.9.provenance.txt  v0.6.9.provenance.txt.ots
site/: README.md  _headers  bake-readme.py  index.html  robots.txt  sitemap.xml
windows/kern-win/: Cargo.toml  build-wsl-rootfs.sh
windows/kern-win/src/: main.rs
