# Its own workspace (the empty [workspace] below) so the nightly + sanitizer + libfuzzer-sys deps
# never touch the main build. Run with `cargo +nightly fuzz run <target>`.
[package]
name = "kern-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
kern-oci = { path = "../crates/kern-oci" }
kern-compose = { path = "../crates/kern-compose" }

[[bin]]
name = "compose_yaml"
path = "fuzz_targets/compose_yaml.rs"
test = false
doc = false
bench = false

[[bin]]
name = "oci_json"
path = "fuzz_targets/oci_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tar_member_path"
path = "fuzz_targets/tar_member_path.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tar_vet"
path = "fuzz_targets/tar_vet.rs"
test = false
doc = false
bench = false

[workspace]
