[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kern-sandbox"
version = "0.1.8"
description = "A fast, local, daemonless code-interpreter sandbox for agent/LLM code: run Python/JS/Bash, get rich results (charts, tables). No cloud, no account, no VM."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "getkern" }]
keywords = ["sandbox", "code-interpreter", "isolation", "namespaces", "seccomp", "agent", "llm", "code-execution", "e2b", "jupyter", "edge", "ci"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]

[project.scripts]
kern-mcp = "kern_sandbox.mcp:main"

[project.urls]
Homepage = "https://github.com/getkern/kern"
Source = "https://github.com/getkern/kern/tree/main/bindings/python"

[tool.hatch.build.targets.wheel]
packages = ["kern_sandbox"]
