[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kern-sandbox"
version = "0.1.9"
description = "kern is a fast, rootless, daemonless Linux sandbox runtime; kern-sandbox is its Python binding. Run untrusted or agent-generated code (Python/JS/Bash) in a real, kernel-enforced box, ~2 ms, no cloud, no account, no VM."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "getkern" }]
keywords = ["sandbox", "code-interpreter", "isolation", "namespaces", "seccomp", "agent", "llm", "code-execution", "e2b", "jupyter", "edge", "ci"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]

[project.scripts]
kern-mcp = "kern_sandbox.mcp:main"

[project.urls]
Homepage = "https://github.com/getkern/kern"
Source = "https://github.com/getkern/kern/tree/main/bindings/python"

[tool.hatch.build.targets.wheel]
packages = ["kern_sandbox"]
