[package]
name = "getkern"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "kern — a fast, lightweight sandbox & virtual resource manager."
readme = "../../README.md"
keywords = ["container", "sandbox", "oci", "runtime", "namespace"]
categories = ["command-line-utilities", "virtualization"]

[[bin]]
name = "kern"
path = "src/main.rs"

[dependencies]
kern-common = { path = "../kern-common", version = "0.3.3" }
kern-oci = { path = "../kern-oci", version = "0.3.3" }
kern-isolation = { path = "../kern-isolation", version = "0.3.3" }
# Already in the tree via kern-isolation; used here for detach (fork/setsid) + liveness (kill).
libc = "0.2"
