[package]
name = "kern-isolation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Namespace / cgroup / mount isolation primitives for kern (internal)."
publish = false

[dependencies]
# The single boundary to the kernel. libc is the minimal, ubiquitous choice (raw syscalls,
# no abstraction) - closest to the project's zero-bloat ethos now that real syscalls are needed.
libc = "0.2"
